# my_medium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  inheritance.c  jojo.c  list.h  lolo.c  polymorphism.c  test_inheritance.c  test_inheritance_2.c  test_list.c  test_nested_list.c  test_polymorphism.c  test_timing.c
